--- a/briar-android/src/main/res/values-pt-rBR/strings.xml
+++ b/briar-android/src/main/res/values-pt-rBR/strings.xml
@@ -1,8 +1,15 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <!--Setup-->
-  <string name="setup_title">Configuração de Briar</string>
-  <string name="setup_explanation">Sua conta Briar é armazenada criptografada apenas no seu dispositivo, não na nuvem. Se você Desinstalar o Briar ou esquecer sua senha, não será possível recuperar sua conta e seus dados.</string>
+  <string name="setup_title">Bem-vindo ao Briar</string>
+  <string name="setup_name_explanation">Seu nome de usuária será mostrado próximo a qualquer conteúdo que você publicar. Você não pode mudá-lo depois que criar sua conta,</string>
+  <string name="setup_next">Próximo</string>
+  <string name="setup_password_intro">Escolha uma senha</string>
+  <string name="setup_password_explanation">A sua conta do Briar está salva de modo criptografado no seu dispositivo, não na nuvem. Se você esquecer sua senha nou desinstalar o Briar não há como recuperar sua conta.\n\nEscolha uma senha longa que seja difícil de ser adivinhada, como cinco palavras aleatórias ou dez letras, números e símbolos aleatórios.</string>
+  <string name="setup_doze_title">Conexões em segundo plano</string>
+  <string name="setup_doze_intro">Para receber mensagens, o Briar precisa permanecer conectado em segundo plano.</string>
+  <string name="setup_doze_explanation">Para receber mensagens, o Briar precisa permanecer conectado em segundo plano. Por favor, desative as otimizações da bateria para que o Briar possa permanecer conectado.</string>
+  <string name="setup_doze_button">Pemitir conexões</string>
   <string name="choose_nickname">Escolha seu apelido</string>
   <string name="choose_password">Escolha sua senha</string>
   <string name="confirm_password">Confirme sua senha</string>
@@ -10,6 +17,12 @@
   <string name="password_too_weak">A senha está muito fraca</string>
   <string name="passwords_do_not_match">As senhas não conferem</string>
   <string name="create_account_button">Criar conta</string>
+  <string name="more_info">Informações adicionais</string>
+  <string name="don_t_ask_again">Não perguntar novamente</string>
+  <string name="setup_huawei_text">Toque no botão abaixo e verifique se o Briar está protegido na tela \"Aplicativos Protegidos\"</string>
+  <string name="setup_huawei_button">Proteger o Briar</string>
+  <string name="setup_huawei_help">Se o Briar não for adicionado à lista de aplicativos protegidos ele não poderá ser executado em segundo plano.</string>
+  <string name="warning_dozed">%s não pôde ser executado em segundo plano</string>
   <!--Login-->
   <string name="enter_password">Insira sua senha:</string>
   <string name="try_again">Senha Incorreta, tente novamente</string>
@@ -20,12 +33,13 @@
   <string name="startup_failed_notification_title">Briar não pode iniciar</string>
   <string name="startup_failed_notification_text">Você pode precisar reinstalar o Briar.</string>
   <string name="startup_failed_activity_title">Inicialização do Briar falhou</string>
-  <string name="startup_failed_db_error">Por alguma razão, seus dados do Briar estão corrompidos e não podem ser reparados. Sua conta, seus dados e todas suas conexões com contatos estão perdidas. Infelizmente você terá que resintalar o Briar e criar uma nova conta.</string>
+  <string name="startup_failed_db_error">Por algum motivo, seu banco de dados do Briar foi corrompido enão pode ser reparado. Sua conta, seus dados e todos seus contatos estão perdidos. Infelizmente, você precisa reinstalar o Briar e criar uma nova conta.</string>
   <string name="startup_failed_service_error">O Briar não pode iniciar devido a um plugin. Reinstalar o Briar geralmente resolve esse problema. Porém, note que ao fazer isso você perderá sua conta e todos os dados associados a ela,  já que o Briar não usa um servidor central para armazenar seus dados.</string>
   <plurals name="expiry_warning">
-    <item quantity="one">Esta é uma versão beta do Briar. Sua conta irá expirar em %d dias e não poderá ser renovada.</item>
-    <item quantity="other">Esta é uma versão beta do Briar. Sua conta irá expirar em %d dias e não poderá ser renovada.</item>
+    <item quantity="one">Esta é uma versão de teste do Briar. Sua conta irá expirar em %d dia e não poderá ser renovada.</item>
+    <item quantity="other">Esta é uma versão de teste do Briar. Sua conta irá expirar em %d dias e não poderá ser renovada.</item>
   </plurals>
+  <string name="expiry_update">O prazo de validade da versão de teste foi extendido. Agora sua conta irá expirar em %d dias.</string>
   <string name="expiry_date_reached">Este software expirou.\nObrigado por testar!</string>
   <!--Navigation Drawer-->
   <string name="nav_drawer_open_description">Abrir aba de navegação</string>
@@ -79,6 +93,8 @@
   <string name="ellipsis">…</string>
   <string name="text_too_long">O texto entrado é muito grande</string>
   <string name="show_onboarding">Mostrar dialogo de ajuda</string>
+  <string name="fix">Consertar</string>
+  <string name="help">Ajuda</string>
   <!--Contacts and Private Conversations-->
   <string name="no_contacts">Parece que você é novo aqui e ainda não tem contatos.\nClique no ícone + no topo e siga as instruções para adicionar alguns amigos para sua lista.\nPor favor lembre: você só pode adicionar contatos pessoalmente para prevenir alguém se passar por você ou ler suas mensagens no futuro. </string>
   <string name="date_no_private_messages">Sem Mensagens</string>
@@ -90,31 +106,20 @@
   <string name="contact_deleted_toast">Contato apagado</string>
   <!--Adding Contacts-->
   <string name="add_contact_title">Adicionar um contato</string>
-  <string name="your_nickname">Escolha a identidade que você quer usar:</string>
   <string name="face_to_face">Você deve estar frente-a-frente com a pessoa que deseja adicionar como contato.\n\nIsso evita que alguém se passe por você ou leia suas mensagens no futuro.</string>
   <string name="continue_button">Continuar</string>
-  <string name="your_invitation_code">Seu código do convite é</string>
-  <string name="enter_invitation_code">Insira o código do convite do contato:</string>
-  <string name="searching_format">Procurando por contato com código de convite %06d\u2026</string>
   <string name="connection_failed">Conexão incompleta</string>
-  <string name="could_not_find_contact">Briar não conseguiu achar nenhum contato por perto</string>
   <string name="try_again_button">Tente novamente</string>
-  <string name="connected_to_contact">Conectado ao contato</string>
-  <string name="calculating_confirmation_code">Calculando código de confirmação\u2026</string>
-  <string name="your_confirmation_code">Seu código de confirmação é</string>
-  <string name="enter_confirmation_code">Insira o código de confirmação do contato:</string>
-  <string name="waiting_for_contact">Esperando pelo contato\u2026</string>
   <string name="waiting_for_contact_to_scan">Esperando pelo contato escanear e conectar\u2026</string>
   <string name="exchanging_contact_details">Transferindo detalhes do contato\u2026</string>
-  <string name="codes_do_not_match">Códigos não conferem</string>
-  <string name="interfering">Isto pode significar que algúem está tentando interferir em sua conexão</string>
   <string name="contact_added_toast">Contato adicionado: %s</string>
   <string name="contact_already_exists">Contato %s já existe</string>
   <string name="contact_exchange_failed">Troca de contatos falhou</string>
   <string name="qr_code_invalid">O QR code é inválido</string>
+  <string name="camera_error">Erro da câmera</string>
   <string name="connecting_to_device">Conectando a device\u2026</string>
   <string name="authenticating_with_device">Autenticando com o dispositivo\u2026</string>
-  <string name="connection_aborted_local">Conexão interrompida por nós! Isso pode disgnificar que alguém está tentando interferir na sua conexão</string>
+  <string name="connection_aborted_local">Conexão abortada! Isso pode significar que alguém está tentando interferir na sua conexão.</string>
   <string name="connection_aborted_remote">Conexão interrompida pelo seu contato! Isto pode significar que algúem está tentando interferir em sua conexão</string>
   <!--Introductions-->
   <string name="introduction_onboarding_title">Apresente seus contatos</string>
@@ -335,6 +340,7 @@
   <string name="notify_sound_setting_default">Toque padrão</string>
   <string name="notify_sound_setting_disabled">Nenhum</string>
   <string name="choose_ringtone_title">Escolher toque</string>
+  <string name="cannot_load_ringtone">Não foi possível carregar o toque</string>
   <!--Settings Feedback-->
   <string name="feedback_settings_title">Feedback</string>
   <string name="send_feedback">Enviar feedback</string>
@@ -362,5 +368,11 @@
   <!--Sign Out-->
   <string name="progress_title_logout">Saindo do Briar…</string>
   <!--Screen Filters & Tapjacking-->
+  <string name="screen_filter_title">Sobreposição de tela detectada</string>
   <string name="screen_filter_body">Outro aplicativo está rodando por cima do Briar. Para proteger sua segurança, o Briar não irá responder por toques quando outro aplicativo estiver por cima.\n\nTente desligar os seguintes aplicativos quando for usar o Briar:\n\n %1$s</string>
+  <!--Permission Requests-->
+  <string name="permission_camera_title">Permissão da câmera</string>
+  <string name="permission_camera_request_body">O Briar precisa acessar a câmera para pode escanear o QR code.</string>
+  <string name="permission_camera_denied_body">Você negou acesso à câmera, mas adicionar contatos requer que você use a câmera.\n\nPor favor, considere a concessão de acesso a ela.</string>
+  <string name="permission_camera_denied_toast">A permissão da câmera não foi concedida</string>
 </resources>
